# GugaPPT

./: .env.example  .gitignore  README.md  docker-compose.yml
src-backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
src-backend/app/: consts.py
src-backend/app/routes/presentation/: router.py  schemas.py  utils.py
src-backend/app/templates/: home.html
src-backend/core/: consts.py  logger_config.py  settings.py
src-backend/mcp_server/: mcp_server.py  tools.py  workflow.py
src-backend/mcp_server/agents/illustrator/: agent.py  schemas.py
src-backend/mcp_server/agents/ilustrator/: agent.py  schemas.py
src-backend/mcp_server/agents/planner/: agent.py  prompts.py  schemas.py
src-backend/mcp_server/agents/researcher/: agent.py  prompts.py  schemas.py
src-backend/mcp_server/agents/writer/: agent.py  prompts.py  schemas.py
src-backend/mcp_server/helper/: source_validator.py
src-backend/tests/: test_workflow.py
